tests/fail/assigner2.dit
A {
    String value;
}

A a(v1, v2, v3) {
    value = garbage;
}

A obj;
obj = a('1', '2', '3');